# magewell-capture-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: push.yml
src/: dep_stubs.rs  eco_channel.rs  fourcc.rs  lib.cpp  lib.hpp  lib.rs  no_deps.rs  pro_channel.rs  pro_eco_capture_family.rs  types.rs  universal_capture_family.rs
