[package]
name = "magewell-capture"
version = "0.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
snafu = "0.8.0"
nix = { version = "0.28", features = ["event"] }

[build-dependencies]
# We're very permissive here with bindgen due to https://github.com/rust-lang/cargo/issues/5237
bindgen = "0.*"
cc = "1.0"
