[package]
name = "magewell-capture"
version = "0.0.0"
edition = "2021"
build = "build.rs"

[features]
default = []

# If no-deps is enabled, the build will be stripped down to avoid any dependency on v4l2, udev, or asound.
no-deps = []

[dependencies]
snafu = "0.8.0"
nix = { version = "0.28", features = ["event"] }

[build-dependencies]
# We're very permissive here with bindgen due to https://github.com/rust-lang/cargo/issues/5237
bindgen = "0.*"
cc = "1.0"
